manifests/environments/at22/apps/web-api-eu/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-api-eu
spec:
  hostnames:
    - dialogporten.at22.dis-core.altinn.cloud
